Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33127

Crash delivering key event to just-unloaded MouseArea

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.1.1
    • None
    • cb9672c86d2679bcb0d9e10f76b12eb03f4c515e

    Description

      import QtQuick 2.1
      import QtQuick.Controls 1.0
      
      Item {
        id: root
        width: 100
        height: 100
      
        property alias __active: loader.active
      
        Loader {
          id: loader
          active: true
          sourceComponent: Button {
            text: 'Hit space to crash'
            onClicked: root.__active = false
            focus: true
          }
      
          focus: true
        }
      }
      

      Hit space, on the keyup this will crash:

      >	Qt5Quickd.dll!QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >::data()  Line 132 + 0x3 bytes	C++
       	Qt5Quickd.dll!qGetPtrHelper<QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> > >(const QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> > & p)  Line 886 + 0xb bytes	C++
       	Qt5Quickd.dll!QQuickWindow::d_func()  Line 70 + 0x13 bytes	C++
       	Qt5Quickd.dll!QQuickWindow::contentItem()  Line 1098 + 0x8 bytes	C++
       	Qt5Quickd.dll!QQuickItemPrivate::deliverKeyEvent(QKeyEvent * e)  Line 4404 + 0xf bytes	C++
       	Qt5Quickd.dll!QQuickWindow::sendEvent(QQuickItem * item, QEvent * e)  Line 2150	C++
       	Qt5Quickd.dll!QQuickWindow::keyReleaseEvent(QKeyEvent * e)  Line 1236	C++
       	Qt5Quickd.dll!QQuickView::keyReleaseEvent(QKeyEvent * e)  Line 590	C++
       	Qt5Guid.dll!QWindow::event(QEvent * ev)  Line 1874	C++
       	Qt5Quickd.dll!QQuickWindow::event(QEvent * e)  Line 1212	C++
       	Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e)  Line 3471 + 0x11 bytes	C++
       	Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e)  Line 2892 + 0x10 bytes	C++
       	Qt5Cored.dll!QCoreApplication::notifyInternal(QObject * receiver, QEvent * event)  Line 867 + 0x15 bytes	C++
       	Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event)  Line 235 + 0x38 bytes	C++
       	Qt5Guid.dll!QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent * e)  Line 1581 + 0xe bytes	C++
       	Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e)  Line 1292 + 0x9 bytes	C++
       	Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEventsImplementation(QFlags<enum QEventLoop::ProcessEventsFlag> flags)  Line 581 + 0x9 bytes	C++
       	Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags)  Line 561 + 0x9 bytes	C++
       	qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents()  Line 86 + 0xd bytes	C++
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            jfaust Josh Faust
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes