Don't crash due to KeyRelease on an unloaded Item

Task-number: QTBUG-33127
Change-Id: Ie0c28abdb32c3b2318f934d3d2ddf459329384a2
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>
Reviewed-by: Caroline Chao <caroline.chao@digia.com>